Fix overflowing HTML containers

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -2,14 +2,14 @@
     background-color: rgb(42, 68, 237);
     display: grid;
     place-content: center;
-    padding-top: 2em;
-    padding-bottom: 5em
+    padding-top: 4%;
+    padding-bottom: 5%;
 }
 
 #winner-name-display {
     position: relative;
     place-self: center;
-    height: 3rem;
+    height: 10%;
     font-size: 2rem;
     font-weight: 900;
     font-style: italic;
@@ -23,20 +23,13 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     place-content: center;
-    height: 30em;
-    width: 60em;
-    gap: 4em;
-    margin-bottom: 3rem;
-    margin-top: 2rem;
 }
 
 .board {
     display: grid;
     grid-template-rows: 1fr 5fr;
     border: 4px solid black;
-    margin: 2rem;
-    height: 100%;
-    width: 100%;
+    margin: 5%;
 }
 
 .board.winner {
@@ -50,7 +43,7 @@
     display: grid;
     grid-template-rows: 1fr 1fr;
     place-content: center;
-    padding: .5em;
+    padding: 5%;
     font-size: 1.25em;
 }
 
@@ -79,8 +72,6 @@
 }
 
 .board-pos {
-    height: 100%;
-    width: 100%;
     border: 1px solid black;
 }
 
